<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Obstetrix Blood Lost</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="zeroweight">1st trimester weight</string>
    <string name="currentweight">Current weight</string>
    <string name="height">Height</string>
    <string name="gestage">Gestation age </string>
    <string name="weeks"> weeks</string>
    <string name="age">Age</string>
    <string name="countvolbtc">Count volumes</string>
    <string name="countblostbtc">Count bloodlost</string>
    <string name="gms"> g</string>
    <string name="exit">Exit</string>
    <string name="title_activity_display_volumes">Display Volumes</string>
    <string name="bsa">Body surface area: </string>
    <string name="sqm"> square meters.</string>
    <string name="nonpreg">For non-pregnant: </string>
    <string name="wholebloodvol">Whole blood volume: </string>
    <string name="plasmavol">Plasma volume: </string>
    <string name="eryvol">Erythrocytes volume: </string>
    <string name="preg">For pregnants in </string>
    <string name="acceptedbloodlost">Acceptable blood lost: </string>
    <string name="mls"> ml.</string>
    <string name="enterzerohb">Provide initial Hb level</string>
    <string name="entertargethb">Enter Hb level after blood loss</string>
    <string name="blosscounted">Blood loss counted:</string>
    <string name="thatis">That is a</string>
    <string name="ofbloodvolume">% of blood volume, or</string>
    <string name="ofplasmavolume">% of plasma volume, or</string>
    <string name="ofbobyweight">% of body weight.</string>
    <string name="title_activity_bloodloss">Blood loss</string>
    <string name="bloodloss">Кровопотеря</string>

</resources>
